--- a/shorthands.html
+++ b/shorthands.html
@@ -87,7 +87,13 @@ $(document).ready(function(){initNavTree('shorthands.html',''); initResizable();
 <div class="title">Short-hand methods </div>  </div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"></div></div><!-- contents -->
+<div class="textblock"><p>Short-hands are shortcuts which make some tests convenient, and sometimes more readable.</p>
+<h2><a class="anchor" id="autotoc_md19"></a>
+Boolean tests</h2>
+<p>For specifically boolean tests, you can opt to use <code>assertTrue</code> and <code>assertFalse</code>.</p>
+<p>For example:</p>
+<div class="fragment"><div class="line">assertTrue(functionReturningBool());</div>
+</div><!-- fragment --> </div></div><!-- contents -->
 </div><!-- PageDoc -->
 </div><!-- doc-content -->
 <!-- start footer part -->
