deploy: 16a9e96be9e8d17243c2c1e6c9edb7ba78ccb54e

--- a/inherits.html
+++ b/inherits.html
@@ -100,15 +100,17 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_4.png" border="0" usemap="#aBBUnit_1_1Settings" alt=""/>
 </td></tr>
-<tr><td><img src="inherit_graph_5.png" border="0" usemap="#aBBUnit_1_1TestResult" alt=""/>
+<tr><td><img src="inherit_graph_5.png" border="0" usemap="#aBBUnit_1_1TestInfo" alt=""/>
 </td></tr>
-<tr><td><img src="inherit_graph_6.png" border="0" usemap="#aBBUnit_1_1TestResults" alt=""/>
+<tr><td><img src="inherit_graph_6.png" border="0" usemap="#aBBUnit_1_1TestResult" alt=""/>
 </td></tr>
-<tr><td><img src="inherit_graph_7.png" border="0" usemap="#aBBUnit_1_1TestRunner" alt=""/>
+<tr><td><img src="inherit_graph_7.png" border="0" usemap="#aBBUnit_1_1TestResults" alt=""/>
 </td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aBBUnit_1_1Utilities_1_1Printer" alt=""/>
+<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aBBUnit_1_1TestRunner" alt=""/>
 </td></tr>
-<tr><td><img src="inherit_graph_9.png" border="0" usemap="#aBBUnit_1_1Utilities_1_1PrinterSettings" alt=""/>
+<tr><td><img src="inherit_graph_9.png" border="0" usemap="#aBBUnit_1_1Utilities_1_1Printer" alt=""/>
+</td></tr>
+<tr><td><img src="inherit_graph_10.png" border="0" usemap="#aBBUnit_1_1Utilities_1_1PrinterSettings" alt=""/>
 </td></tr>
 </table>
 </div><!-- contents -->
